<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Andruino Bluetooth</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Options</string>

    <string name="textSend">Send</string>
    <string name="textConnect">Connect</string>
	<string name="textDisconnect">Disconnect</string>
    <string name="textConnectingError">Error while connecting. Follow this instructions to solve the problem:\n\n1) Check if the device that you want to connect to is near to your device and with the Bluetooth on.\n\n2) Turn off and on again the Bluetooth of the smartphone or tablet that is running this App and try again.</string>
    <string name="textConnected">Connected.</string>
    <string name="textConnectedTo">Connected to</string>
    <string name="textDisconnected">Disconnected</string>
    <string name="textDisconnectedToast">Disconnected.</string>
    <string name="textBluetoothOff">The Bluetooth is Off. You must activate it to proceed.</string>
    <string name="textPairedDevices">Paired devices</string>
    <string name="textPrivacy">Privacy policy</string>
    <string name="textAbout">About...</string>
    <string name="textMessage">Message</string>
    <string name="textOK">OK</string>
    <string name="textAboutMessage"><![CDATA[<h3>Andruino Bluetooth</h3>Copyright &#169; ANOS<br /><br /><b>www.lrusso.com.ar</b><br /><br />by Leonardo Javier Russo.]]></string>
	<string name="textSketch1">Arduino Sketch</string>
    <string name="textSketch1Example">#include &lt;SoftwareSerial.h&gt;\n\nSoftwareSerial bluetooth(10, 11);\n\nvoid setup()\n&#160;&#160;&#160;&#160;&#160;&#160;{\n&#160;&#160;&#160;&#160;&#160;&#160;bluetooth.begin(9600);\n&#160;&#160;&#160;&#160;&#160;&#160;}\n\nvoid loop()\n&#160;&#160;&#160;&#160;&#160;&#160;{\n&#160;&#160;&#160;&#160;&#160;&#160;int incomingByte = 0;\n&#160;&#160;&#160;&#160;&#160;&#160;String content = \"\";\n&#160;&#160;&#160;&#160;&#160;&#160;char character;\n\n&#160;&#160;&#160;&#160;&#160;&#160;while(bluetooth.available())\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;{\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;character = bluetooth.read();\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;content.concat(character);\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;}\n\n&#160;&#160;&#160;&#160;&#160;&#160;if (content!=\"\")\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;{\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;bluetooth.print(content);\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;}\n&#160;&#160;&#160;&#160;&#160;&#160;delay(100);\n&#160;&#160;&#160;&#160;&#160;&#160;}</string>
	<string name="textSchematic1">Arduino Schematic</string>
    <string name="textSketch2">HC-05 AT Mode Sketch</string>
    <string name="textSketch2Example">/*\n\nIMPORTANT: The LED on the HC-05 should blink at 2-second intervals. This shows that the HC-05 is in AT mode.\n\n----------------------------------------------------------------\nAT COMMAND LIST\n----------------------------------------------------------------\n\nAT+VERSION?&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Gets the HC-05 Version\nAT+NAME=MYEXAMPLE&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Change the device name to MYEXAMPLE\nAT+PSWD=5678&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Change the default security code from 1234 to 5678\nAT+UART=9600,1,0&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Change the baud rate to 9600\nAT+UART=115200,1,0&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Change the baud rate to 115200\n\nAfter every command you should get an OK response.\n\n*/\n\n#include &lt;SoftwareSerial.h&gt;\n\nSoftwareSerial BTSerial(10, 11);\n\nvoid setup()\n&#160;&#160;&#160;&#160;{\n&#160;&#160;&#160;&#160;pinMode(9, OUTPUT);\n&#160;&#160;&#160;&#160;digitalWrite(9, HIGH);  // Activating AT Mode\n\n&#160;&#160;&#160;&#160;Serial.begin(9600);\n&#160;&#160;&#160;&#160;BTSerial.begin(38400);  // HC-05 default speed in AT command mode\n\n&#160;&#160;&#160;&#160;Serial.println(\"Enter AT commands:\");\n&#160;&#160;&#160;&#160;}\n\nvoid loop()\n&#160;&#160;&#160;&#160;{\n&#160;&#160;&#160;&#160;if (BTSerial.available())\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;{\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Serial.write(BTSerial.read());\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;}\n\n&#160;&#160;&#160;&#160;if (Serial.available())\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;{\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;BTSerial.write(Serial.read());\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;}\n&#160;&#160;&#160;&#160;}</string>
    <string name="textSchematic2">HC-05 AT Mode Schematic</string>
	<string name="textClear">Clear data</string>
	<string name="textCopy">Copy data</string>
	<string name="textCopyOK">Data copied to the clipboard.</string>
	<string name="textCopyError">There is no data to copy.</string>
		
    <string name="textPrivacyText">Andruino Bluetooth Privacy Policy\n\nReleased on Dec 21, 2016\n\nI, Leonardo Javier Russo, regard your information significant and release this Privacy Statement to inform you what information I collect and how I use it to personalize and continually improve you experience.\n\nThis Privacy Statement applies to the App "Andruino Bluetooth" and its services and does not apply to the product or service that which does not link to this statement or has its privacy statement respectively.\n\n1 - Collecting information\n\na. Personal Information.\n\nI do not collect Personal Information. "Personal Information" is information that identifies you or another person, such as your first name and last name, physical addresses, email addresses, telephone, fax, camera, microphone, GPS, or any information stored within your device.\n\nb. Non-personal Information.\n\nI do not collect your non-personal information when you are using the App "Andruino Bluetooth" or visiting my Website, including your device information, operation system, logs.\n\nc. Information you provide.\n\nI do not collect your information when you communicate with me.\n\nHow I Use Information\n\na. Personal Information.\n\nI do not store Personal Information and therefore I do not disclose your Personal Information.\n\nb. Non-Personal Information.\n\nI do not sell, trade, or otherwise transfer to outside parties your information. I do not combine Non-Personal Information with Personal Information (such as combining your name with your unique User Device number).\n\nContact Me\n\nIf you have any questions or comments about this Policy or our privacy practices, or to report any violations of the Policy or abuse of the App "Andruino Bluetooth" or the Website, please contact me at contacto@lrusso.com.ar.\n\nChanges\n\nThis Privacy Policy may change which will not reduce your rights under this Privacy Policy from time to time, I will post any privacy policy changes on this page, so please review it periodically. If you do not agree to any modifications to this Policy, your could immediately stop all use of all the Services. Your continued use of the App "Andruino Bluetooth" following the posting of any modifications to this Policy will constitute your acceptance of the revised Policy.</string>
</resources>